# verification-gym

./: .gitignore  ASSUMPTIONS.md  DECISIONS.md  HANDOFF.md  README.md  WORKLOG.md  config.yaml  pyproject.toml
audit/szz_sample/: d-0bbe168f1d.json  d-119cdc9e60.json  d-128eead839.json  d-3095222696.json  d-4d72ea8597.json  d-5e178e6060.json  d-63e10cf441.json  d-83c0491ab2.json  d-a37ae1576c.json  d-a4a72fcfbb.json  d-a6dda814dd.json  d-b5da70e934.json  d-bee8020b6b.json  d-c27d01f04b.json  d-c4494ae944.json  d-cab917f4aa.json  d-d33d0843f0.json  d-ebb33a248f.json  d-ec76a68f35.json  d-ee0885c59d.json
docs/superpowers/plans/: 2026-07-02-verification-gym.md
events/: run_main.jsonl  run_xm-gpt54mini.jsonl  run_xm-opus.jsonl
gym/: __init__.py  cli.py  config.py  db.py  difftools.py  generate.py  gitrepo.py  ids.py  inject.py  leakcheck.py  llm.py  mine.py  payload.py  report.py  repos.py  review.py  score.py
gym/arms/: canary.py  gen.py  mut.py  szz.py
reports/: CROSS_MODEL.md  INFERRED.md  LIMITATIONS.md  PHASE0_REPORT.md  PHASE1_REPORT.md  PHASE2_REPORT.md  PHASE3_REPORT.md  PHASE4_REPORT.md  PHASE5_REPORT.md  REPORT.md  canary_audit.json  scores_main.json
tests/: conftest.py  test_config.py  test_difftools.py  test_gen.py  test_generate.py  test_gitrepo.py  test_ids.py  test_inject.py  test_llm.py  test_mine.py  test_mut.py  test_payload.py  test_repos.py  test_review.py  test_score.py  test_szz.py
