[project]
name = "verification-gym"
version = "0.1.0"
description = "Harness measuring LLM verifier defect-detection across defect classes"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.60",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.scripts]
gym = "gym.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gym"]

[tool.pytest.ini_options]
testpaths = ["tests"]
